Fix word wrapping

--- a/packages/terra-form-select/src/_Tag.scss
+++ b/packages/terra-form-select/src/_Tag.scss
@@ -20,8 +20,7 @@
     line-height: 1.143;
     padding: 0.14285714285714285rem 0.571429rem;
     white-space: normal;
-    word-break: break-word;
-    word-wrap: break-word;
+    word-break: break-all;
   }
 
   .deselect {
